--- a/index.html
+++ b/index.html
@@ -6,18 +6,12 @@
                 background-color: #eee;
             }
             .fade {
-                animation-duration: 60s;
+                animation-duration: 40s;
                 animation-name: fade;
-                -webkit-animation-duration: 60s;
+                animation-fill-mode: forwards;
+                -webkit-animation-duration: 40s;
                 -webkit-animation-name: fade;
-            }
-            @keyframes fade {
-                from {
-                    color: #111;
-                }
-                to {
-                    color: #eee;
-                }
+                -webkit-animation-fill-mode: forwards;
             }
             @-webkit-keyframes fade {
                 from {
@@ -27,18 +21,42 @@
                     opacity: 0;
                 }
             }
-            input {
-              opacity: 0;
-              filter:alpha(opacity=0);
-              width: 0;
-              overflow: hidden;
+            .fade-fast {
+                animation-duration: 1.5s;
+                animation-name: fade-fast;
+                animation-fill-mode: forwards;
+                -webkit-animation-duration: 1s;
+                -webkit-animation-name: fade-fast;
+                -webkit-animation-fill-mode: forwards;
+            }
+            @-webkit-keyframes fade-fast {
+                from {
+                    opacity: 1;
+                }
+                to {
+                    opacity: 0;
+                }
+            }
+            .splash {
+              position: absolute;
+              top: 35%;
+              left: 35%;
+              font-style: italic;
+              font-size: 36pt;
+            }
+            .splash p {
+              margin: 10px;
+            }
+            p.line-2 {
+              margin-left: 140px;
             }
         </style>
         <script src="ephemeral.js" type="text/javascript"></script>
         
     </head>
     <body>
-        <input id="hidden" autofocus/>
-        <p>
-        </p>
+      <div class="splash">
+        <p>ephemeral</p>
+        <p class="line-2">editor</p>
+      </div>
     </body>
